--- a/map2.html
+++ b/map2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Proportional Symbols Map</title>
+    <title>2020 US COVID Cases Proportional Symbols</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js"></script>
@@ -26,13 +26,13 @@
     <div id="map"></div>
     <script>
         mapboxgl.accessToken =
-            'pk.eyJ1IjoiamFrb2J6aGFvIiwiYSI6ImNpcms2YWsyMzAwMmtmbG5icTFxZ3ZkdncifQ.P9MBej1xacybKcDN_jehvw';
+            'pk.eyJ1Ijoia2FpdGx5bmJpbGxpbmd0b24iLCJhIjoiY21oY2IzaDY3MDI2bjJpcHo3dTdndnp6OSJ9.CuU9C3o9uwHfnGBccy5s_A';
         let map = new mapboxgl.Map({
             container: 'map', // container ID
-            style: 'mapbox://styles/mapbox/dark-v10',
-            zoom: 5, // starting zoom
-            minZoom: 4, // minimum zoom level of the map
-            center: [138, 38] // starting center
+            style: 'mapbox://styles/mapbox/light-v11',
+            zoom: 4, // starting zoom
+            minZoom: 2, // minimum zoom level of the map
+            center: [-98.6, 40] // starting center
         });
 
         //load data to the map as new layers.
